--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Slide d'illustration 1">
+					<img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1580.webp 1580w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1140.webp 1140w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-300.webp 300w,"
+					class="d-block w-100" 
+					alt="Slide d'illustration 1">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Slide d'illustration 2">
+					<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1920.webp 1920w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1580.webp 1580w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1140.webp 1140w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-300.webp 300w"
+					class="d-block w-100"
+					alt="Slide d'illustration 2">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Slide d'illustration 3">
+					<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp 1920w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1580.webp 1580w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1140.webp 1140w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-300.webp 300w"
+					class="d-block w-100"
+					alt="Slide d'illustration 3">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
