--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" defer>
 	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<!-- <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet"> -->
 	<meta charset="UTF-8">
 	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
@@ -37,17 +34,23 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1580.webp 1580w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1140.webp 1140w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-300.webp 300w,"
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp"
+					srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1920.webp 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1580.webp 1580w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1140.webp 1140w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-300.webp 300w,"
+					sizes="(max-width: 575px) 300px, (max-width: 768px) 1140px, (max-width: 992px) 1580px, 1920px"
 					class="d-block w-100" 
 					alt="Slide d'illustration 1">
 				</div>
 				<div class="carousel-item">
-					<img srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1920.webp 1920w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1580.webp 1580w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1140.webp 1140w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-300.webp 300w"
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1920.webp"
+					srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1920.webp 1920w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1580.webp 1580w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1140.webp 1140w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-300.webp 300w"
+					sizes="(max-width: 575px) 300px, (max-width: 768px) 1140px, (max-width: 992px) 1580px, 1920px"
 					class="d-block w-100"
 					alt="Slide d'illustration 2">
 				</div>
 				<div class="carousel-item">
-					<img srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp 1920w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1580.webp 1580w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1140.webp 1140w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-300.webp 300w"
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp"
+					srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1920.webp 1920w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1580.webp 1580w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1140.webp 1140w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-300.webp 300w"
+					sizes="(max-width: 575px) 300px, (max-width: 768px) 1140px, (max-width: 992px) 1580px, 1920px"
 					class="d-block w-100"
 					alt="Slide d'illustration 3">
 				</div>
