--- a/index.html
+++ b/index.html
@@ -164,5 +164,29 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
+	<!-- Schema.org (Référencement Local) -->
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Person",
+		  "name": "Nina Carducci",
+		  "jobTitle": "Photographe Professionnelle",
+		  "url": "http://www.ninacarducci.com",
+		  "sameAs": [
+			"https://www.instagram.com/ninacarducci.photo/?hl=fr"
+		  ],
+		  "description": "Découvrez le portfolio de Nina Carducci, photographe professionnelle. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.",
+		  "image": "http://www.ninacarducci.com/assets/images/favicon.png",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		  },
+		  "telephone": "+33-5-56-67-78-89",
+		  "openingHours": "Mo-Fr 10:00-19:00"
+		}
+		</script>
 </body>
 </html>
