Changement de la description, Ajout a la description Schema.org

--- a/index.html
+++ b/index.html
@@ -6,8 +6,62 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
 	<meta charset="UTF-8">
-	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
+	<!-- Meta Twitter Cards -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@ninacarducci">
+	<meta name="twitter:title" content="Nina Carducci - Photographe Professionnelle">
+	<meta name="twitter:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
+	<meta name="twitter:image" content="./assets/images/nina.webp">
+	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
 	<title>Nina Carducci - Photographe Professionnelle</title>
+		<!-- Schema.org (Référencement Local) -->
+		<script type="application/ld+json">
+			<script type="application/ld+json">
+				{
+				  "@context": "https://schema.org",
+				  "@graph": [
+					{
+					  "@type": "WebSite",
+					  "@id": "https://douwdy.github.io/Projet-8---Nina-Carducci/#website",
+					  "url": "https://douwdy.github.io/Projet-8---Nina-Carducci/",
+					  "name": "Nina Carducci - Photographe Professionnelle",
+					  "description": "Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.",
+					  "inLanguage": "fr-FR"
+					},
+					{
+					  "@type": "WebPage",
+					  "@id": "https://douwdy.github.io/Projet-8---Nina-Carducci/#webpage",
+					  "url": "https://douwdy.github.io/Projet-8---Nina-Carducci/",
+					  "isPartOf": { "@id": "https://douwdy.github.io/Projet-8---Nina-Carducci/#website" },
+					  "name": "Nina Carducci - Photographe Professionnelle",
+					  "description": "Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.",
+					  "inLanguage": "fr-FR",
+					  "potentialAction": {
+						"@type": "ReadAction",
+						"target": ["https://douwdy.github.io/Projet-8---Nina-Carducci/"]
+					  }
+					},
+					{
+					  "@type": "ProfessionalService",
+					  "currenciesAccepted": "EUR",
+					  "paymentAccepted": "Cash, Credit Card",
+					  "priceRange": "50-400€",
+					  "openingHours": "Mo-Fr 10:00-19:00",
+					  "address": {
+						"@type": "PostalAddress",
+						"streetAddress": "68 avenue Alsace-Lorraine",
+						"addressLocality": "Bordeaux",
+						"postalCode": "33200",
+						"addressCountry": "FR"
+					  },
+					  "telephone": "+33556677889",
+					  "areaServed": { "@type": "AdministrativeArea", "name": ["Bordeaux", "Île de France"] },
+					  "legalName": "Nina Carducci"
+					}
+				  ]
+				}
+				</script>
+		</script>
 </head>
 <body>
 	<header class="top-header">
@@ -164,29 +218,5 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
-	<!-- Schema.org (Référencement Local) -->
-	<script type="application/ld+json">
-		{
-		  "@context": "https://schema.org",
-		  "@type": "Person",
-		  "name": "Nina Carducci",
-		  "jobTitle": "Photographe Professionnelle",
-		  "url": "http://www.ninacarducci.com",
-		  "sameAs": [
-			"https://www.instagram.com/ninacarducci.photo/?hl=fr"
-		  ],
-		  "description": "Découvrez le portfolio de Nina Carducci, photographe professionnelle. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.",
-		  "image": "http://www.ninacarducci.com/assets/images/favicon.png",
-		  "address": {
-			"@type": "PostalAddress",
-			"streetAddress": "68 avenue Alsace-Lorraine",
-			"addressLocality": "Bordeaux",
-			"postalCode": "33200",
-			"addressCountry": "FR"
-		  },
-		  "telephone": "+33-5-56-67-78-89",
-		  "openingHours": "Mo-Fr 10:00-19:00"
-		}
-		</script>
 </body>
 </html>
