Ajout du nom et d'une image d'illustration dans le référencement local

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 						},
 						{
 						"@type": "ProfessionalService",
+						"image": "https://douwdy.github.io/Projet-8---Nina-Carducci/assets/images/nina.webp",
+						"name": "Nina Carducci",
 						"currenciesAccepted": "EUR",
 						"paymentAccepted": "Cash, Credit Card",
 						"priceRange": "50-400€",
