Ajout des Meta Twitter et OpenGraph, réarrangement des balises meta

--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" defer>
-	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
-	<meta charset="UTF-8">
+	<!-- Meta Open Graph -->
+	<meta property="og:url" content="https://douwdy.github.io/Projet-8---Nina-Carducci/">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Nina Carducci - Photographe Professionnelle">
+	<meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
+	<meta property="og:image:src" content="https://douwdy.github.io/Projet-8---Nina-Carducci/assets/images/nina.webp">
+	<meta property="og:image:alt" content="Photo de Nina Carducci">
+	<meta property="og:locale" content="fr_FR">
 	<!-- Meta Twitter Cards -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ninacarducci">
 	<meta name="twitter:title" content="Nina Carducci - Photographe Professionnelle">
 	<meta name="twitter:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
-	<meta name="twitter:image" content="./assets/images/nina.webp">
+	<meta name="twitter:image" content="https://douwdy.github.io/Projet-8---Nina-Carducci/assets/images/nina.webp">
+	<!-- Links vers les ressources -->
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" defer>
+	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
+	<!-- Meta Classique -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="index, follow">
+	<meta charset="UTF-8">
 	<meta name="description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
 	<title>Nina Carducci - Photographe Professionnelle</title>
 		<!-- Schema.org (Référencement Local) -->
