Ajout de la balise meta canonical

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<!-- Links vers les ressources -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" defer>
 	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">+
+	<link rel="canonical" href="https://douwdy.github.io/Projet-8---Nina-Carducci/">
 	<!-- Meta Classique -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="index, follow">
