--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Nina Carducci - Photographe Professionnelle">
 	<meta property="og:description" content="Découvrez le portfolio de Nina Carducci, photographe professionnelle spécialisée dans les spectacles, mariages, portraits et entrepreneuriat. Explorez ses services de shooting photo, retouches et albums photos. Contactez-la pour capturer vos moments précieux.">
-	<meta property="og:image:src" content="https://douwdy.github.io/Projet-8---Nina-Carducci/assets/images/nina.webp">
-	<meta property="og:image:alt" content="Photo de Nina Carducci">
+	<meta property="og:image" content="https://douwdy.github.io/Projet-8---Nina-Carducci/assets/images/nina.webp">
 	<meta property="og:locale" content="fr_FR">
 	<!-- Meta Twitter Cards -->
 	<meta name="twitter:card" content="summary_large_image">
